--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="fx fx-sparkles" aria-hidden="true"></div>
 
   <!-- Audio -->
-  <audio id="openSfx" preload="auto" src="open.mp3"></audio>
-  <audio id="bgm" preload="auto" src="happy-wedding.mp3" loop></audio>
+  <audio id="openSfx" preload="auto" src="Tieng_no.mp3"></audio>
+  <audio id="bgm" preload="auto" src="Sound1.mp3" loop></audio>
 
   <!-- Cover (Closed card) -->
   <main id="cover" class="cover" aria-label="Thiệp cưới (đang đóng)">
