--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="fx fx-sparkles" aria-hidden="true"></div>
 
   <!-- Audio -->
-  <audio id="openSfx" preload="auto" src="Tieng_no.mp3"></audio>
+  <audio id="openSfx" preload="auto" src="Mo_thiep.mp3"></audio>
   <audio id="bgm" preload="auto" src="Sound1.mp3" loop></audio>
 
   <!-- Cover (Closed card) -->
@@ -25,9 +25,9 @@
         <div class="front-content">
           <p class="tiny">TRÂN TRỌNG KÍNH MỜI</p>
           <h1 class="names">
-            <span id="coverBride">CÔ DÂU</span>
+            <span id="coverBride">Đỗ Mỹ Kim</span>
             <span class="amp">&</span>
-            <span id="coverGroom">CHÚ RỂ</span>
+            <span id="coverGroom">Châu Tuấn Khang</span>
           </h1>
           <p class="date-time">
             <span id="coverDate">20:00 • 20/02/2026</span>
@@ -59,9 +59,9 @@
       <div class="hero-inner">
         <p class="badge">Thiệp Mời Lễ Thành Hôn</p>
         <h1 class="hero-names">
-          <span id="brideName">Nguyễn Thị A</span>
+          <span id="brideName">Đỗ Mỹ Kim</span>
           <span class="amp">&</span>
-          <span id="groomName">Trần Văn B</span>
+          <span id="groomName">Châu Tuấn Khang</span>
         </h1>
 
         <p class="hero-sub">
@@ -79,11 +79,11 @@
 
         <div class="hero-actions">
           <button id="btnToggleMusic" class="btn" type="button">Tắt nhạc</button>
-          <button id="btnScrollHint" class="btn btn-ghost" type="button">Tắt auto-scroll</button>
+          <button id="btnScrollHint" class="btn btn-ghost" type="button">Tắt cuộn tự động</button>
         </div>
 
         <p class="auto-note" id="autoNote">
-          Thiệp đang tự cuộn để bạn xem toàn bộ nội dung. Chạm/scroll bất kỳ để tắt.
+          <!-- Thiệp đang tự cuộn để bạn xem toàn bộ nội dung. Chạm/scroll bất kỳ để tắt. -->
         </p>
       </div>
     </header>
@@ -91,7 +91,7 @@
     <section class="section">
       <div class="container">
         <h2 class="section-title">Album Ảnh Cưới</h2>
-        <p class="section-desc">Bạn có thể thay ảnh bằng cách đổi <code>data-src</code> sang ảnh của bạn.</p>
+        <!-- <p class="section-desc">Bạn có thể thay ảnh bằng cách đổi <code>data-src</code> sang ảnh của bạn.</p> -->
 
         <div class="gallery" id="gallery" aria-label="Album ảnh cưới">
           <!-- Placeholders; replace data-src with your images (e.g. album/1.jpg) -->
